apps/web-ingress.yml
# apps/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywebapp-ingress
  namespace: mywebapp
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  -  http:
       paths:
         - pathType: Prefix
           path: "/" 
           backend:
             service:
               name: web
               port:
                 number: 80
